Version 1.0 - December 3, 2010 by Alden
  - reset the version number
  - cleaned up some code