@@ -1,3 +1,6 @@
+Version 3d.0 - January 20, 2011 by Alden
+  - implemented 3d balls, I think
+
 Version 1.0 - December 3, 2010 by Alden
   - reset the version number
   - cleaned up some code
